...
        }
      }
    },
    "Berechtigungen erneut anfragen" : {

    },
    "Bericht" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Report"
          }
...
            "state" : "translated",
            "value" : "Functional impact: %1$@"
          }
        }
      }
    },
    "Einstellungen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Edit Entry"
          }
        }
      }
    },
    "Eintrag gespeichert" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entry Saved"
          }
...
            "state" : "translated",
            "value" : "Good"
          }
        }
      }
    },
    "Heute" : {

    },
    "Hier bleiben aktive, pausierte und beendete Therapien und Präventionsmaßnahmen historisch nachvollziehbar." : {

    },
    "Hilf uns, Symi besser zu machen." : {
...
            "state" : "translated",
            "value" : "Get more clarity about your body in just a few seconds."
          }
        }
      }
    },
    "Insights" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Insights"
          }
...
    "Synchronisation aktivieren" : {

    },
    "Synchronisation deaktivieren?" : {

    },
    "Tagebuch" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diary"
          }
...
